# mfa4aws

./: .editorconfig  README.md  pyproject.toml
mfa4aws/: __init__.py  cli.py  config.py  core.py  util.py  version.py
